[gd_scene load_steps=41 format=4 uid="uid://f0sc3xcf6b5h"]

[ext_resource type="PackedScene" uid="uid://cm2f40rvqfd66" path="res://scenes/utils/base_scene.tscn" id="1_55dy1"]
[ext_resource type="Script" path="res://scripts/world/outdoor.gd" id="2_gcws6"]
[ext_resource type="Texture2D" uid="uid://da4ai86lyx17v" path="res://assets/images/outdoor/grass.png" id="3_kfc7b"]
[ext_resource type="Texture2D" uid="uid://dbs8jn1ogfcip" path="res://assets/images/outdoor/shadow.png" id="4_jhwpx"]
[ext_resource type="PackedScene" uid="uid://bsd7ynav7k5v6" path="res://scenes/entities/player.tscn" id="5_wgtfb"]
[ext_resource type="Shader" path="res://shaders/advanced_modulate.gdshader" id="6_ik3tu"]
[ext_resource type="AudioStream" uid="uid://d1p3pia6m14cs" path="res://assets/audios/footstep_grass.mp3" id="7_8ygu1"]
[ext_resource type="Texture2D" uid="uid://l3le5lgqjehp" path="res://assets/images/outdoor/house.png" id="7_xn3np"]
[ext_resource type="Texture2D" uid="uid://cp6khqctqg4y1" path="res://assets/images/tree/tree1.png" id="8_ij3j8"]
[ext_resource type="Texture2D" uid="uid://bxfl0kqebxng6" path="res://assets/images/tree/tree2.png" id="9_3qoq5"]
[ext_resource type="Texture2D" uid="uid://bwq84f4hwfbuo" path="res://assets/images/tree/tree3.png" id="10_ggtqt"]
[ext_resource type="Texture2D" uid="uid://bojclgvvwjehl" path="res://assets/images/tree/tree4.png" id="11_e0kl7"]
[ext_resource type="Texture2D" uid="uid://coswctm44vfxl" path="res://assets/images/outdoor/mailbox.png" id="12_26mu3"]
[ext_resource type="Texture2D" uid="uid://dele8q1v81e83" path="res://assets/images/outdoor/car.png" id="13_b0ebu"]
[ext_resource type="PackedScene" uid="uid://conc52ihmoy0b" path="res://scenes/utils/hotspot.tscn" id="14_imhac"]
[ext_resource type="AudioStream" uid="uid://byqj7du8qmygi" path="res://assets/audios/car-running.mp3" id="15_bxybd"]
[ext_resource type="Shader" path="res://shaders/vertical_vignette.gdshader" id="15_iwl4p"]
[ext_resource type="PackedScene" uid="uid://6onope3m1r2f" path="res://scenes/interfaces/mobile_controls.tscn" id="16_65220"]
[ext_resource type="AudioStream" uid="uid://pf43b8pkh48u" path="res://assets/audios/car-stopping.mp3" id="16_ju5jh"]
[ext_resource type="AudioStream" uid="uid://dl2k4pmi7axxh" path="res://assets/audios/Snow_falls_again.mp3" id="20_ghv16"]
[ext_resource type="Script" path="res://scripts/utils/music_area.gd" id="20_oxkmf"]

[sub_resource type="Environment" id="Environment_70alq"]
background_mode = 3
adjustment_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p5lsc"]
shader = ExtResource("6_ik3tu")
shader_parameter/red_factor = 1.0
shader_parameter/green_factor = 1.0
shader_parameter/blue_factor = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/contrast = 1.0
shader_parameter/hue_shift = 0.0
shader_parameter/gamma = 1.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ke4sm"]
texture = ExtResource("8_ij3j8")
0:0/size_in_atlas = Vector2i(5, 8)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 56)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.1188, -0.140308, -12.768, -3.85846, -8, -8, 9.61108, -10.1022, 16.7668, -5.75262, 20.5551, -0.561232, 15.8548, 3.01661, 8, 6.10339, -2.80616, 6.03324, -7.296, 0.140306)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_svbbd"]
texture = ExtResource("9_3qoq5")
0:0/size_in_atlas = Vector2i(5, 8)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 56)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.92913, -1.68661, -15.0307, -1.88504, -13.8898, -6.99448, 7.937, -9.27637, 15.2935, -5.61231, 16.6265, -3.22708, 9.12756, 4.16693, -2.62913, 3.9685, -6.99448, 2.03386)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kj4kk"]
texture = ExtResource("10_ggtqt")
0:0/size_in_atlas = Vector2i(5, 8)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 56)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.17716, -1.38898, -15.1299, -2.03386, -14.9315, -6.89527, 14.625, -8.1875, 17.75, -3.25, 8, 4.01811, -4.91102, 4.16693)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_26ydp"]
texture = ExtResource("11_e0kl7")
0:0/size_in_atlas = Vector2i(5, 8)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 56)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-22.6205, -8.13543, -12.1039, -14.8819, 12.1039, -15.1795, 19.6441, -8.33386, 9.02835, 0.992126, -6.44882, 0.892914)

[sub_resource type="TileSet" id="TileSet_cnpmq"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_ke4sm")
sources/2 = SubResource("TileSetAtlasSource_svbbd")
sources/3 = SubResource("TileSetAtlasSource_kj4kk")
sources/4 = SubResource("TileSetAtlasSource_26ydp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80wvx"]
size = Vector2(14, 12)

[sub_resource type="Curve2D" id="Curve2D_2eopt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -16, 0, 0, 0, 0, 0, 290, 0)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_fda41"]
atlas = ExtResource("13_b0ebu")
region = Rect2(0, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvp0w"]
atlas = ExtResource("13_b0ebu")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_peeuj"]
atlas = ExtResource("13_b0ebu")
region = Rect2(0, 96, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnfm"]
atlas = ExtResource("13_b0ebu")
region = Rect2(0, 144, 96, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yibd8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fda41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvp0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peeuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnfm")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kskcu"]
size = Vector2(70.0048, 28.8018)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ral5y"]
shader = ExtResource("15_iwl4p")
shader_parameter/inner_offset = 0.4
shader_parameter/outer_offset = 0.0

[sub_resource type="Animation" id="Animation_irwe4"]
resource_name = "HouseOverview"
length = 20.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../GlobalCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 4.1, 13, 13.1, 18),
"transitions": PackedFloat32Array(1, 1e-05, 1, 7.77931e-05, 1, 1),
"update": 0,
"values": [Vector2(234, 88), Vector2(234, 180), Vector2(103, 144), Vector2(375, 144), Vector2(234, 191), Vector2(234, 261)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../GlobalCamera:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 13),
"transitions": PackedFloat32Array(1, 1e-05, 1),
"update": 0,
"values": [Vector2(3.57, 3.57), Vector2(3.57, 3.57), Vector2(7.2, 7.2)]
}

[sub_resource type="Animation" id="Animation_l0vsc"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_66aio"]
_data = {
"HouseOverview": SubResource("Animation_irwe4"),
"RESET": SubResource("Animation_l0vsc")
}

[node name="Outdoor" instance=ExtResource("1_55dy1")]
y_sort_enabled = true
script = ExtResource("2_gcws6")

[node name="InvisibleWall" type="StaticBody2D" parent="." index="2"]
position = Vector2(-23, 8)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InvisibleWall" index="0"]
build_mode = 1
polygon = PackedVector2Array(24, 802, 504, 802, 504, -8, 24, -8)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="3"]
environment = SubResource("Environment_70alq")

[node name="Grass" type="Sprite2D" parent="." index="4"]
y_sort_enabled = true
texture = ExtResource("3_kfc7b")
centered = false

[node name="Shadow" type="Sprite2D" parent="." index="5"]
y_sort_enabled = true
texture = ExtResource("4_jhwpx")
centered = false

[node name="Player" parent="." index="6" instance=ExtResource("5_wgtfb")]
visible = false
material = SubResource("ShaderMaterial_p5lsc")
position = Vector2(271, 753)
walk_sound = ExtResource("7_8ygu1")

[node name="House" type="StaticBody2D" parent="." index="7"]
y_sort_enabled = true
position = Vector2(247, 129)

[node name="Sprite2D" type="Sprite2D" parent="House" index="0"]
position = Vector2(-14, 42)
texture = ExtResource("7_xn3np")
centered = false
offset = Vector2(-115, -155)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House" index="1"]
build_mode = 1
polygon = PackedVector2Array(-35, 81, -35, 97, 8, 97, 8, 81, 59, 81, 59, 62, 91, 62, 91, 32, 59, 32, 59, -18, -87, -18, -86, 32, -117, 32, -117, 62, -86, 62, -86, 81)

[node name="Tree" type="TileMapLayer" parent="." index="8"]
y_sort_enabled = true
position = Vector2(11, 3)
tile_map_data = PackedByteArray("AAACACoABAAAAAAAAAACACEABAAAAAAAAAAVACIABAAAAAAAAAAbACoAAwAAAAAAAAAIABEABAAAAAAAAAAUABAAAQAAAAAAAAAaABMAAQAAAAAAAAAXAAYAAQAAAAAAAAAbAAkAAQAAAAAAAAAGAAMAAQAAAAAAAAAAAAgAAQAAAAAAAAADAAsAAgAAAAAAAAAXABwAAQAAAAAAAAAFABIAAQAAAAAAAAAZACAAAQAAAAAAAAACACUAAgAAAAAAAAD//yYAAgAAAAAAAAAXACsAAwAAAAAAAAAaACgAAgAAAAAAAAAcACYAAgAAAAAAAAASACAAAgAAAAAAAAATABgAAgAAAAAAAAAYABgAAgAAAAAAAAAZABMAAgAAAAAAAAAHACQAAwAAAAAAAAAEAB8AAwAAAAAAAAD//yAAAwAAAAAAAAACAB0AAwAAAAAAAAD//xoAAwAAAAAAAAADABoAAwAAAAAAAAABABgAAwAAAAAAAAACABQAAwAAAAAAAAABABQAAwAAAAAAAAADAA4AAwAAAAAAAAAAAA8AAwAAAAAAAAAEAAgAAwAAAAAAAAADAAUAAwAAAAAAAAD//wIAAwAAAAAAAAAUAAMAAwAAAAAAAAAaAAQAAwAAAAAAAAAdAAYAAwAAAAAAAAAZABAAAwAAAAAAAAAdAA8AAwAAAAAAAAAcABYAAwAAAAAAAAAbABsAAwAAAAAAAAAYACQAAwAAAAAAAAAcACEAAwAAAAAAAAAGACkAAgAAAAAAAAAFABYAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_cnpmq")

[node name="Mailbox" type="StaticBody2D" parent="." index="9"]
y_sort_enabled = true
position = Vector2(318, 701)

[node name="Sprite2D" type="Sprite2D" parent="Mailbox" index="0"]
position = Vector2(10, 32)
texture = ExtResource("12_26mu3")
centered = false
offset = Vector2(-10, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mailbox" index="1"]
position = Vector2(10, 32)
shape = SubResource("RectangleShape2D_80wvx")

[node name="CarPath" type="Path2D" parent="." index="10"]
position = Vector2(-71, 763)
curve = SubResource("Curve2D_2eopt")

[node name="CarPosition" type="PathFollow2D" parent="CarPath" index="0"]
unique_name_in_owner = true
position = Vector2(-16, 0)
loop = false

[node name="Car" type="StaticBody2D" parent="CarPath/CarPosition" index="0"]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(1.2, 1.2)

[node name="CarSprite" type="AnimatedSprite2D" parent="CarPath/CarPosition/Car" index="0"]
sprite_frames = SubResource("SpriteFrames_yibd8")
animation = &"moving"
autoplay = "moving"
frame_progress = 0.156523
centered = false
offset = Vector2(-48, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarPath/CarPosition/Car" index="1"]
position = Vector2(3.23921, 4.71185)
shape = SubResource("RectangleShape2D_kskcu")

[node name="CarRunningSound" type="AudioStreamPlayer2D" parent="CarPath/CarPosition/Car" index="2"]
unique_name_in_owner = true
stream = ExtResource("15_bxybd")

[node name="CarStoppingSound" type="AudioStreamPlayer2D" parent="CarPath/CarPosition/Car" index="3"]
unique_name_in_owner = true
stream = ExtResource("16_ju5jh")

[node name="StartingPoint" type="Marker2D" parent="." index="11"]
position = Vector2(240, 639)

[node name="TaskCall" parent="." index="12" instance=ExtResource("14_imhac")]
visible = true
position = Vector2(234, 285)
monitoring = true

[node name="TaskGoInside" parent="." index="13" instance=ExtResource("14_imhac")]
position = Vector2(234, 232)

[node name="Vignette" type="ColorRect" parent="." index="14"]
z_index = 10
material = SubResource("ShaderMaterial_ral5y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 810.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MobileControls" parent="." index="15" instance=ExtResource("16_65220")]
layer = 10
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="17"]
stream = ExtResource("20_ghv16")

[node name="MusicArea" type="Area2D" parent="." index="18"]
script = ExtResource("20_oxkmf")

[node name="GlobalCamera" type="Camera2D" parent="." index="19"]
position = Vector2(234, 88)
zoom = Vector2(3.57, 3.57)
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 810

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="20"]
root_node = NodePath("../EntranceMarkers/Spawn")
libraries = {
"": SubResource("AnimationLibrary_66aio")
}

[node name="Spawn" type="Marker2D" parent="EntranceMarkers" index="0"]
position = Vector2(240, 753)

[node name="FollowCamera" parent="." index="22" node_paths=PackedStringArray("follow_node")]
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 810
editor_draw_limits = true
follow_node = NodePath("../Player")

[connection signal="body_entered" from="TaskCall" to="." method="_on_task_call_body_entered"]
[connection signal="body_entered" from="TaskGoInside" to="." method="_on_task_go_inside_body_entered"]
